handle skipUserManagement, add name to package.json

--- a/generators/app/templates/app/shared/reducers/index.js.ejs
+++ b/generators/app/templates/app/shared/reducers/index.js.ejs
@@ -15,9 +15,11 @@ export const reducers = combineReducers({
   <%_ } _%>
   account: require('./account.reducer').reducer,
   login: require('../../modules/login/login.reducer').reducer,
+<%_ if (!context.skipUserManagement) { _%>
   register: require('../../modules/account/register/register.reducer').reducer,
   changePassword: require('../../modules/account/password/change-password.reducer').reducer,
   forgotPassword: require('../../modules/account/password-reset/forgot-password.reducer').reducer
+<%_ } _%>
 })
 
 export default () => {
