--- a/generators/app/templates/app/shared/sagas/index.js.ejs
+++ b/generators/app/templates/app/shared/sagas/index.js.ejs
@@ -8,9 +8,11 @@ import AppConfig from '../../config/app-config'
 import { StartupTypes } from '../reducers/startup.reducer'
 import { LoginTypes } from '../../modules/login/login.reducer'
 import { AccountTypes } from '../../shared/reducers/account.reducer'
+<%_ if (!context.skipUserManagement) { _%>
 import { RegisterTypes } from '../../modules/account/register/register.reducer'
 import { ForgotPasswordTypes } from '../../modules/account/password-reset/forgot-password.reducer'
 import { ChangePasswordTypes } from '../../modules/account/password/change-password.reducer'
+<%_ } _%>
 import { UserTypes } from '../../shared/reducers/user.reducer'
 // jhipster-react-native-saga-redux-import-needle
 
@@ -18,9 +20,11 @@ import { UserTypes } from '../../shared/reducers/user.reducer'
 
 import { startup } from './startup.saga'
 import { login, logout, loginLoad } from '../../modules/login/login.sagas'
+<%_ if (!context.skipUserManagement) { _%>
 import { register } from '../../modules/account/register/register.sagas'
 import { forgotPassword } from '../../modules/account/password-reset/forgot-password.sagas'
 import { changePassword } from '../../modules/account/password/change-password.sagas'
+<%_ } _%>
 import { getAccount, updateAccount } from '../../shared/sagas/account.sagas'
 import UserSagas from '../../shared/sagas/user.sagas'
 // jhipster-react-native-saga-method-import-needle
@@ -42,15 +46,17 @@ export default function * root () {
     takeLatest(LoginTypes.LOGIN_LOAD, loginLoad, api),
     takeLatest(LoginTypes.LOGIN_REQUEST, login, api),
     takeLatest(LoginTypes.LOGOUT_REQUEST, logout, api),
+    // jhipster-react-native-saga-redux-connect-needle
+
+<%_ if (!context.skipUserManagement) { _%>
     takeLatest(RegisterTypes.REGISTER_REQUEST, register, api),
     takeLatest(ForgotPasswordTypes.FORGOT_PASSWORD_REQUEST, forgotPassword, api),
     takeLatest(ChangePasswordTypes.CHANGE_PASSWORD_REQUEST, changePassword, api),
-    // jhipster-react-native-saga-redux-connect-needle
-
     takeLatest(UserTypes.USER_REQUEST, UserSagas.getUser, api),
-    takeLatest(UserTypes.USER_ALL_REQUEST, UserSagas.getAllUsers, api),
     takeLatest(UserTypes.USER_UPDATE_REQUEST, UserSagas.updateUser, api),
     takeLatest(UserTypes.USER_DELETE_REQUEST, UserSagas.deleteUser, api),
+<%_ } _%>
+    takeLatest(UserTypes.USER_ALL_REQUEST, UserSagas.getAllUsers, api),
 
     takeLatest(AccountTypes.ACCOUNT_REQUEST, getAccount, api),
     takeLatest(AccountTypes.ACCOUNT_UPDATE_REQUEST, updateAccount, api)
