--- a/generators/app/templates/test/spec/shared/reducers/user.reducer.spec.js.ejs
+++ b/generators/app/templates/test/spec/shared/reducers/user.reducer.spec.js.ejs
@@ -1,17 +1,18 @@
 import Actions, { reducer, INITIAL_STATE } from '../../../../app/shared/reducers/user.reducer'
 
-test('attempt retrieving a single user', () => {
-  const state = reducer(INITIAL_STATE, Actions.userRequest({ id: 1 }))
-
-  expect(state.fetchingOne).toBe(true)
-  expect(state.user).toBe(null)
-})
-
 test('attempt retrieving a list of user', () => {
   const state = reducer(INITIAL_STATE, Actions.userAllRequest({ id: 1 }))
 
   expect(state.fetchingAll).toBe(true)
   expect(state.userList).toEqual([])
+})
+
+<%_ if (!context.skipUserManagement) { _%>
+test('attempt retrieving a single user', () => {
+  const state = reducer(INITIAL_STATE, Actions.userRequest({ id: 1 }))
+
+  expect(state.fetchingOne).toBe(true)
+  expect(state.user).toBe(null)
 })
 
 test('attempt updating a user', () => {
@@ -32,6 +33,7 @@ test('success retrieving a user', () => {
   expect(state.errorOne).toBe(null)
   expect(state.user).toEqual({ id: 1 })
 })
+<%_ } _%>
 
 test('success retrieving a list of user', () => {
   const state = reducer(INITIAL_STATE, Actions.userAllSuccess([{ id: 1 }, { id: 2 }]))
@@ -41,6 +43,7 @@ test('success retrieving a list of user', () => {
   expect(state.userList).toEqual([{ id: 1 }, { id: 2 }])
 })
 
+<%_ if (!context.skipUserManagement) { _%>
 test('success updating a user', () => {
   const state = reducer(INITIAL_STATE, Actions.userUpdateSuccess({ id: 1 }))
 
@@ -48,6 +51,7 @@ test('success updating a user', () => {
   expect(state.errorUpdating).toBe(null)
   expect(state.user).toEqual({ id: 1 })
 })
+
 test('success deleting a user', () => {
   const state = reducer(INITIAL_STATE, Actions.userDeleteSuccess())
 
@@ -56,20 +60,21 @@ test('success deleting a user', () => {
   expect(state.user).toEqual(null)
 })
 
-test('failure retrieving a user', () => {
-  const state = reducer(INITIAL_STATE, Actions.userFailure({ error: 'Not found' }))
-
-  expect(state.fetchingOne).toBe(false)
-  expect(state.errorOne).toEqual({ error: 'Not found' })
-  expect(state.user).toEqual(null)
-})
-
+<%_ } _%>
 test('failure retrieving a list of user', () => {
   const state = reducer(INITIAL_STATE, Actions.userAllFailure({ error: 'Not found' }))
 
   expect(state.fetchingAll).toBe(false)
   expect(state.errorAll).toEqual({ error: 'Not found' })
   expect(state.userList).toEqual([])
+})
+<%_ if (!context.skipUserManagement) { _%>
+test('failure retrieving a user', () => {
+  const state = reducer(INITIAL_STATE, Actions.userFailure({ error: 'Not found' }))
+
+  expect(state.fetchingOne).toBe(false)
+  expect(state.errorOne).toEqual({ error: 'Not found' })
+  expect(state.user).toEqual(null)
 })
 
 test('failure updating a user', () => {
@@ -86,3 +91,4 @@ test('failure deleting a user', () => {
   expect(state.errorDeleting).toEqual({ error: 'Not found' })
   expect(state.user).toEqual(INITIAL_STATE.user)
 })
+<%_ } _%>
