--- a/generators/app/templates/app/navigation/nav-container.js.ejs
+++ b/generators/app/templates/app/navigation/nav-container.js.ejs
@@ -11,10 +11,12 @@ import { connect } from 'react-redux';
 // import screens
 import HomeScreen from '../modules/home/home-screen';
 import LoginScreen from '../modules/login/login-screen';
+<%_ if (!context.skipUserManagement) { _%>
 import SettingsScreen from '../modules/account/settings/settings-screen';
 import RegisterScreen from '../modules/account/register/register-screen';
 import ForgotPasswordScreen from '../modules/account/password-reset/forgot-password-screen';
 import ChangePasswordScreen from '../modules/account/password/change-password-screen';
+<%_ } _%>
 import AccountActions from '../shared/reducers/account.reducer';
 import EntityStackScreen, { getEntityRoutes } from './entity-stack';
 import StorybookScreen from '../../storybook';
@@ -38,6 +40,7 @@ export const drawerScreens = [
     component: LoginScreen,
     auth: false,
   },
+<%_ if (!context.skipUserManagement) { _%>
   {
     name: 'Settings',
     route: 'settings',
@@ -62,6 +65,7 @@ export const drawerScreens = [
     component: ChangePasswordScreen,
     auth: true,
   },
+<%_ } _%>
   {
     name: 'EntityStack',
     isStack: true,
