--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -1,4 +1,5 @@
 {
+  "name": "<%= context.reactNativeAppNameKebabCase %>",
   "version": "0.0.1",
   "scripts": {
     "test:watch": "jest --watch",
@@ -139,5 +140,8 @@
     ],
     "preset": "jest-expo"
   },
-  "config": { }
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  }
 }
