--- a/generators/app/templates/test/spec/shared/sagas/user.saga.spec.js.ejs
+++ b/generators/app/templates/test/spec/shared/sagas/user.saga.spec.js.ejs
@@ -3,31 +3,11 @@ import { put } from 'redux-saga/effects'
 import UserSagas from '../../../../app/shared/sagas/user.sagas'
 import UserActions from '../../../../app/shared/reducers/user.reducer'
 
-const { getUser, getAllUsers, updateUser, deleteUser } = UserSagas;
-
 const stepper = (fn) => (mock) => fn.next(mock).value
-
-test('get success path', () => {
-  const response = FixtureAPI.getUser(1)
-  const step = stepper(getUser(FixtureAPI, { userId: { id: 1 } }))
-  // Step 1: Hit the api
-  step()
-  // Step 2: Successful return and data!
-  expect(step(response)).toEqual(put(UserActions.userSuccess({ id: 1 })))
-})
-
-test('get failure path', () => {
-  const response = { ok: false }
-  const step = stepper(getUser(FixtureAPI, { userId: { id: 1 } }))
-  // Step 1: Hit the api
-  step()
-  // Step 2: Failed response.
-  expect(step(response)).toEqual(put(UserActions.userFailure()))
-})
 
 test('getAll success path', () => {
   const response = FixtureAPI.getAllUsers()
-  const step = stepper(getAllUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
+  const step = stepper(UserSagas.getAllUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Successful return and data!
@@ -36,16 +16,35 @@ test('getAll success path', () => {
 
 test('getAll failure path', () => {
   const response = { ok: false }
-  const step = stepper(getAllUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
+  const step = stepper(UserSagas.getAllUsers(FixtureAPI, { options: { page: 0, sort: 'id,asc', size: 20 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Failed response.
   expect(step(response)).toEqual(put(UserActions.userAllFailure()))
 })
 
+<%_ if (!context.skipUserManagement) { _%>
+test('get success path', () => {
+  const response = FixtureAPI.getUser(1)
+  const step = stepper(UserSagas.getUser(FixtureAPI, { userId: { id: 1 } }))
+  // Step 1: Hit the api
+  step()
+  // Step 2: Successful return and data!
+  expect(step(response)).toEqual(put(UserActions.userSuccess({ id: 1 })))
+})
+
+test('get failure path', () => {
+  const response = { ok: false }
+  const step = stepper(UserSagas.getUser(FixtureAPI, { userId: { id: 1 } }))
+  // Step 1: Hit the api
+  step()
+  // Step 2: Failed response.
+  expect(step(response)).toEqual(put(UserActions.userFailure()))
+})
+
 test('update success path', () => {
   const response = FixtureAPI.updateUser({ id: 1 })
-  const step = stepper(updateUser(FixtureAPI, { user: { id: 1 } }))
+  const step = stepper(UserSagas.updateUser(FixtureAPI, { user: { id: 1 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Successful return and data!
@@ -54,7 +53,7 @@ test('update success path', () => {
 
 test('update failure path', () => {
   const response = { ok: false }
-  const step = stepper(updateUser(FixtureAPI, { user: { id: 1 } }))
+  const step = stepper(UserSagas.updateUser(FixtureAPI, { user: { id: 1 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Failed response.
@@ -63,7 +62,7 @@ test('update failure path', () => {
 
 test('delete success path', () => {
   const response = FixtureAPI.deleteUser({ id: 1 })
-  const step = stepper(deleteUser(FixtureAPI, { userId: { id: 1 } }))
+  const step = stepper(UserSagas.deleteUser(FixtureAPI, { userId: { id: 1 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Successful return and data!
@@ -72,9 +71,10 @@ test('delete success path', () => {
 
 test('delete failure path', () => {
   const response = { ok: false }
-  const step = stepper(deleteUser(FixtureAPI, { userId: { id: 1 } }))
+  const step = stepper(UserSagas.deleteUser(FixtureAPI, { userId: { id: 1 } }))
   // Step 1: Hit the api
   step()
   // Step 2: Failed response.
   expect(step(response)).toEqual(put(UserActions.userDeleteFailure()))
 })
+<%_ } _%>
