--- a/generators/app/templates/app/modules/login/login.sagas.js.ejs
+++ b/generators/app/templates/app/modules/login/login.sagas.js.ejs
@@ -40,7 +40,7 @@ export function * login (api) {
       ? 'Failed to reach backend API'
       : authInfo.data && authInfo.data.detail
       ? authInfo.data.detail
-      : 'Bad Credentials';
+      : 'Bad credentials';
     yield put(LoginActions.loginFailure(errorMessage));
   }
 }
@@ -69,7 +69,7 @@ export function * login (api, { username, password }) {
       ? 'Failed to reach backend API'
       : response.data && response.data.detail
       ? response.data.detail
-      : 'Bad Credentials';
+      : 'Bad credentials';
     yield put(LoginActions.loginFailure(errorMessage));
   }
 }
