many changes to fix github actions
load searchEngine and detox config before entity generation
check auth type before generation
fix app tests - only use backend dir for e2e tests
update dependencies for the generator
install jhipster and expo-cli globally
pin node version to LTS for CI
don't skip-install for tests
fix prettier transform when skipClient is set in JDL or .yo-rc.sjon
fix double import and add snapshot update to test command
remove android badge, don't start oauth2 backend, wait for expo as well
increase wait time for splashcreen for e2e tests

--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -17,7 +17,7 @@ const loginAsUser = async () => {
   await closeKeyboard('loginScreen');
   await element(by.id('loginScreenLoginButton')).tap();
   try {
-    await waitForSplashScreen();
+    await waitForElementToBeVisibleById('homeScreen')
   } catch (e) {
     throw new Error('Logging in failed. Check backend status or credentials.');
   }
@@ -67,16 +67,16 @@ const tapFirstElementByLabel = async (label) => {
   await element(by.label(label)).atIndex(0).tap();
 };
 
-const waitForElementToBeVisibleByLabel = async (elementLabel, timeout = 3000) => {
+const waitForElementToBeVisibleByLabel = async (elementLabel, timeout = 5000) => {
   await waitFor(element(by.label(elementLabel))).toBeVisible().withTimeout(timeout);
 }
 
-const waitForElementToBeVisibleById = async (elementId, timeout = 3000) => {
+const waitForElementToBeVisibleById = async (elementId, timeout = 5000) => {
   await waitFor(element(by.id(elementId))).toBeVisible().withTimeout(timeout);
 }
 
 const waitForSplashScreen = async () => {
-  await waitForElementToBeVisibleById('homeScreen')
+  await waitForElementToBeVisibleById('homeScreen', 15000)
 };
 
 const reloadApp = async () => {
