disable service workers like the default expo config and to prevent issues

--- a/generators/app/templates/webpack.config.js.ejs
+++ b/generators/app/templates/webpack.config.js.ejs
@@ -5,7 +5,7 @@ module.exports = async function (env, argv) {
     {
       ...env,
       // Passing true will enable the default Workbox + Expo SW configuration.
-      offline: true,
+      offline: false,
     },
     argv,
   );
