--- a/generators/app/templates/app/shared/sagas/index.js.ejs
+++ b/generators/app/templates/app/shared/sagas/index.js.ejs
@@ -6,6 +6,9 @@ import AppConfig from '../../config/app-config'
 /* ------------- Types ------------- */
 
 import { StartupTypes } from '../reducers/startup.reducer'
+<%_ if (context.authenticationType === 'oauth2') { _%>
+import { AuthInfoTypes } from '../reducers/auth-info.reducer';
+<%_ } _%>
 import { LoginTypes } from '../../modules/login/login.reducer'
 import { AccountTypes } from '../../shared/reducers/account.reducer'
 <%_ if (!context.skipUserManagement) { _%>
@@ -19,6 +22,9 @@ import { UserTypes } from '../../shared/reducers/user.reducer'
 /* ------------- Sagas ------------- */
 
 import { startup } from './startup.saga'
+<%_ if (context.authenticationType === 'oauth2') { _%>
+import { getAuthInfo } from './auth-info.saga';
+<%_ } _%>
 import { login, logout, loginLoad } from '../../modules/login/login.sagas'
 <%_ if (!context.skipUserManagement) { _%>
 import { register } from '../../modules/account/register/register.sagas'
@@ -41,6 +47,9 @@ export default function * root () {
   yield all([
     // some sagas only receive an action
     takeLatest(StartupTypes.STARTUP, startup),
+<%_ if (context.authenticationType === 'oauth2') { _%>
+    takeLatest(AuthInfoTypes.AUTH_INFO_REQUEST, getAuthInfo, api),
+<%_ } _%>
 
     // JHipster accounts
     takeLatest(LoginTypes.LOGIN_LOAD, loginLoad, api),
