lint and test fixes
fail CI on lint error
fix duplicate getAll method when entity has relationship to self
lint fixes
update login.saga.spec for oauth2 changes to auth-info

--- a/generators/app/templates/.eslintrc.js.ejs
+++ b/generators/app/templates/.eslintrc.js.ejs
@@ -12,6 +12,7 @@ module.exports = {
     expect: 'readonly',
     fetch: 'readonly',
     navigator: 'readonly',
+    waitFor: 'readonly',
     XMLHttpRequest: 'readonly',
     __DEV__: 'readonly',
     FormData: 'readonly',
