--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -1,9 +1,8 @@
 const Utils = require('../utils');
 
 describe('Change Password Screen Tests', () => {
-  const username = process.env.E2E_USERNAME || 'user';
   const password = process.env.E2E_PASSWORD || 'user';
-  const newPassword = process.env.E2E_NEW_PASSWORD || 'new-password';
+  const updatedPassword = process.env.E2E_NEW_PASSWORD || 'new-password';
 
   before(async () => {
     await Utils.reloadApp();
@@ -34,10 +33,10 @@ describe('Change Password Screen Tests', () => {
 
   it('should display a success message on change password success', async () => {
     const expectedLabel = 'Password changed';
-    await changePassword(password, newPassword);
+    await changePassword(password, updatedPassword);
     await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
     await expect(element(by.label(expectedLabel))).toBeVisible();
-    await changePassword(newPassword, password);
+    await changePassword(updatedPassword, password);
     await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
     await expect(element(by.label(expectedLabel))).toBeVisible();
   });
