--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -5,7 +5,7 @@
     "test:watch": "jest --watch",
     "updateSnapshot": "jest --updateSnapshot",
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
-    "lint": "eslint app test App.js --ext .js",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
     "test": "jest",
     "publish": "expo publish",
     "build:ios": "expo build:ios",
