--- a/generators/entity/templates/entity-e2e-test.js.ejs
+++ b/generators/entity/templates/entity-e2e-test.js.ejs
@@ -1,4 +1,6 @@
+<%_ if (context.fieldsContainDate) { _%>
 const jestExpect = require('expect');
+<%_ } _%>
 const Utils = require('../utils')
 <%_
 context.resetFakerSeed(`entity-cypress-${context.entityNameCapitalized}`);
